concord_examples/tests/ui/endpoint_params_block_removed.stderr
error: endpoint params blocks are not supported; declare params in `Name(...)`
 --> tests/ui/endpoint_params_block_removed.rs:9:9
  |
9 |     GET Ping(id: String)
  |         ^^^^
